# FrenderTest

./: .clang-format  .gitmodules  CMakeLists.txt  GLTFLoader.cc  GLTFLoader.hh  main.cpp
Assets/: .fluxproj_cache  Sphere.farc  assets.proj.json
